Have a quick update to be made on the Community Help Page (HTML attached for reference) – can we please make sure the hero space is the attached JPG? The specs should align to the hero space on the Category page (1200 x ~259).

--- a/src/less/help.less
+++ b/src/less/help.less
@@ -4,31 +4,19 @@
 		font-size: 16px;
 
 		.hero {
-			min-height: 384px;
 			border-bottom:6px solid @teal;
-
-			&.empty {
-				min-height: inherit;
-				height: 265px;
-
-				.hero-img {
-					max-height:265px;
-				}
-			}
 
 			.hero-img {
 				overflow:hidden;
 				width:100%;
-				max-height:384px;		
+				height:100%;
 				background-repeat: no-repeat;
   				background-size: cover;	
   				background-position: 0% 50%;
-  				height:384px;
 
 				img{
 					width: 100%;
 					min-width:100%;
-					min-height:384px;
 					display:block;
 				}
 			}
