--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1752,29 +1752,19 @@ th {
   font-size: 16px;
 }
 .ae-content[data-page='help'] .hero {
-  min-height: 384px;
   border-bottom: 6px solid #009bbb;
-}
-.ae-content[data-page='help'] .hero.empty {
-  min-height: inherit;
-  height: 265px;
-}
-.ae-content[data-page='help'] .hero.empty .hero-img {
-  max-height: 265px;
 }
 .ae-content[data-page='help'] .hero .hero-img {
   overflow: hidden;
   width: 100%;
-  max-height: 384px;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0% 50%;
-  height: 384px;
 }
 .ae-content[data-page='help'] .hero .hero-img img {
   width: 100%;
   min-width: 100%;
-  min-height: 384px;
   display: block;
 }
 .ae-content[data-page='help'] .hero h2 {
